# qual-law-guideline

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  KNOWLEDGE.md  README.md  TODO.md  pyproject.toml
docs/: IR_EGOV_MAPPING.md  NORMALIZED_RELEASE_CHECKLIST.md  NORMALIZED_RUN_OUTPUT_4FILES_GUIDE.md  NORMALIZED_RUN_PLAYBOOK.md  REFERENCE.md  TESTPLAN_XML2IR.md
scripts/: check_bidi_controls.py  check_normalized_promotion_completion.py  check_pr_body_escape_policy.py  check_venv_command_policy.py  check_venv_runtime.py  download-ecfr-part211.ps1  extract_table_contexts.py  slice_pics_annex.py
tests/: test_bundle_gmp.py  test_check_bidi_controls.py  test_check_pr_body_escape_policy.py  test_egov_table_payload_header_inference.py  test_egov_table_spans.py  test_integration_real_xml.py  test_ir_structure.py  test_markdown_table_parsing.py  test_normal_note_descendants.py  test_ord_key.py  test_pics_annex11_profile.py  test_pics_annex15_profile.py  test_pics_annex1_profile_v2.py  test_pics_annex2a_preformatted.py  test_pics_annexes_full_profile_v1.py  test_pics_annexes_refine_v2.py  test_pics_annexes_refine_v3_fallback.py  test_pics_part1_chapter_headers.py  test_pics_part1_full_v3.py  test_pics_part2_v1.py  test_profile_loader_extends.py  test_serialize_overwrite.py  test_slice_pics_annex.py  test_text2ir_bundle.py  test_text2ir_cfr_notes.py  test_text2ir_cfr_quality_v2.py  test_text2ir_eu_gmp_chap1.py  test_text2ir_marker_disambiguation.py  test_text2ir_normalization.py  test_text2ir_profiles_pics.py  test_text2ir_who_lbm_3rd.py  test_trace_provenance.py  (+5 more)
(+280 files in other folders)
